Unit tests and other improvements (WIP)
- Some changes in the TestSettingsManager to try to make it work on Windows (need testing).
- Add a test utils method to help with environment variables.
- Add some configuration to pom.xml, so it allows to get the environment variables and update them in the newer versions of Java.